Atualizacao do gitignore e remocao de arquivos de configuracao de IDE e Build

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-/target/
+# --- Maven (Arquivos de Build) ---
+target/
+*.log
+dependency-reduced-pom.xml
+
+# --- Eclipse (Arquivos de IDE) ---
+.classpath
+.project
+.settings/
+bin/
+
+# --- NetBeans (Arquivos de IDE) ---
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+nbactions.xml
+
+# --- Sistema Operacional ---
+.DS_Store
+Thumbs.db
